AX: AccessibilityObject::children() returns invalid results sometimes https://bugs.webkit.org/show_bug.cgi?id=130563

Reviewed by Joseph Pecoraro.

Source/WebCore:

Allow the DOM inspector to handle AX objects that do not have Node equivalents
(e.g. anonymous renderers).

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::processAccessibilityChildren):
(WebCore::InspectorDOMAgent::buildObjectForAccessibilityProperties):
* inspector/InspectorDOMAgent.h:

LayoutTests:

* inspector-protocol/dom/getAccessibilityPropertiesForNode-expected.txt:



Canonical link: https://commits.webkit.org/149206@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166703 268f45cc-cd09-0410-ab3c-d52691b4dbfc